# rChat

./: Cargo.toml  Makefile  README.md
docs/: chat-server.drawio  send.drawio
src/: chat_utils.rs  client.rs  codec.rs  main.rs  server.rs  session.rs
