[package]
name = "rChat"
version = "0.1.0"
authors = ["rai <rai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
actix = "0.11.0-beta.1"
actix_derive = "0.5"
actix-rt = "2.0.0"

async-stream = "0.3"
bytes = "1"
byteorder = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.10"
tokio = { version = "1", features = ["io-util", "sync"] }
tokio-util = { version = "0.6", features = ["codec"] }